# iniparser

./: .gitignore  CMakeLists.txt  README.md
lib/include/: dictionary.h  iniparser.h
lib/src/: dictionary.c  iniparser.c
tests/src/: AllTests.cpp  Parser.cpp
